Finished creating row divs and putting element divs in them, works much better now, Fixed overflow issue of previous version

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body{
 #container{
     width: 960px;
     height: 960px;
+    gap: 1px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
